@@ -4,6 +4,8 @@ Release 2.0.1 - ???
    * Improved packaging for tika-parsers-extended. Use the tika-parser-scientific-package and
      tika-parser-sqlite3-package artifacts if you want fat jars with dependencies. (TIKA-3510)
 
+   * Tika app writes UTF-8 when an encoding is not specified; the legacy behavior
+     was UTF-8 on Mac OS, but System default on other OSs (TIKA-3515).
 
    Other changes:
    * Fix markup ordering errors in xhtml output for ODT files (TIKA-2242).
